service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  namespace: edu-naughty-pike
spec:
  selector:
    app: nginx
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
    nodePort: 30321
  type: NodePort
